k8s/istio/istio_publish/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubia
  namespace: default
spec:
  host: kubia
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
